# server_robot

./: README.md
butler_simulation/: CMakeLists.txt  package.xml
butler_simulation/config/: controllers.yaml  move_base_params.yaml
butler_simulation/launch/: amcl.launch  butler_simulation.launch  gazebo.launch  move_base.launch
butler_simulation/scripts/: butler_navigation.py  test_orders.py
butler_simulation/urdf/: butler.urdf
butler_simulation/worlds/: restaurant.world
imu_publisher/: CMakeLists.txt  abc.csv  package.xml
imu_publisher/launch/: imu_publisher.launch
imu_publisher/scripts/: imu_publisher.py  imu_visualizer.py
imu_publisher/src/: publisher.py
imu_sensor/: CMakeLists.txt  package.xml
imu_sensor/scripts/: imu_publisher.py
restaurant_bot/: CMakeLists.txt  package.xml
restaurant_bot/launch/: restaurant_navigation.launch  restaurant_simulation.launch  spawn_turtlebot.launch
restaurant_bot/maps/: restaurant_map.pgm  restaurant_map.yaml
restaurant_bot/scripts/: server_robot.py
restaurant_bot/worlds/: restaurant_world.world
trajectory_visualization/: CMakeLists.txt  package.xml
trajectory_visualization/src/: trajectory_publisher_saver.cpp  trajectory_reader_publisher.cpp
trajectory_visualization/srv/: SaveTrajectory.srv
