<package format="2">
  <name>trajectory_visualization</name>
  <version>0.0.0</version>
  <description>The trajectory_visualization package</description>

  <maintainer email="surya@todo.todo">surya</maintainer>
  <license>MIT</license>

  <!-- Build tool dependency -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies required at build time -->
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <!-- Dependencies required at runtime -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- Export information -->
  <export></export>
</package>
